; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/platform/java/extr_mupdf_native.c_fz_java_device_clip_image_mask.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/platform/java/extr_mupdf_native.c_fz_java_device_clip_image_mask.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { i32, %struct.TYPE_9__** }
%struct.TYPE_9__ = type { i64 (%struct.TYPE_9__**)*, i32 (%struct.TYPE_9__**, i32, i32, i32, i32)* }

@mid_Device_clipImageMask = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*, i32*, i32, i32)* @fz_java_device_clip_image_mask to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @fz_java_device_clip_image_mask(i32* %0, i32* %1, i32* %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca %struct.TYPE_8__*, align 8
  %12 = alloca %struct.TYPE_9__**, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store i32* %1, i32** %7, align 8
  store i32* %2, i32** %8, align 8
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %15 = load i32*, i32** %7, align 8
  %16 = bitcast i32* %15 to %struct.TYPE_8__*
  store %struct.TYPE_8__* %16, %struct.TYPE_8__** %11, align 8
  %17 = load %struct.TYPE_8__*, %struct.TYPE_8__** %11, align 8
  %18 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %17, i32 0, i32 1
  %19 = load %struct.TYPE_9__**, %struct.TYPE_9__*** %18, align 8
  store %struct.TYPE_9__** %19, %struct.TYPE_9__*** %12, align 8
  %20 = load i32*, i32** %6, align 8
  %21 = load %struct.TYPE_9__**, %struct.TYPE_9__*** %12, align 8
  %22 = load i32*, i32** %8, align 8
  %23 = call i32 @to_Image(i32* %20, %struct.TYPE_9__** %21, i32* %22)
  store i32 %23, i32* %13, align 4
  %24 = load i32*, i32** %6, align 8
  %25 = load %struct.TYPE_9__**, %struct.TYPE_9__*** %12, align 8
  %26 = load i32, i32* %9, align 4
  %27 = call i32 @to_Matrix(i32* %24, %struct.TYPE_9__** %25, i32 %26)
  store i32 %27, i32* %14, align 4
  %28 = load %struct.TYPE_9__**, %struct.TYPE_9__*** %12, align 8
  %29 = load %struct.TYPE_9__*, %struct.TYPE_9__** %28, align 8
  %30 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %29, i32 0, i32 1
  %31 = load i32 (%struct.TYPE_9__**, i32, i32, i32, i32)*, i32 (%struct.TYPE_9__**, i32, i32, i32, i32)** %30, align 8
  %32 = load %struct.TYPE_9__**, %struct.TYPE_9__*** %12, align 8
  %33 = load %struct.TYPE_8__*, %struct.TYPE_8__** %11, align 8
  %34 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %33, i32 0, i32 0
  %35 = load i32, i32* %34, align 8
  %36 = load i32, i32* @mid_Device_clipImageMask, align 4
  %37 = load i32, i32* %13, align 4
  %38 = load i32, i32* %14, align 4
  %39 = call i32 %31(%struct.TYPE_9__** %32, i32 %35, i32 %36, i32 %37, i32 %38)
  %40 = load %struct.TYPE_9__**, %struct.TYPE_9__*** %12, align 8
  %41 = load %struct.TYPE_9__*, %struct.TYPE_9__** %40, align 8
  %42 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %41, i32 0, i32 0
  %43 = load i64 (%struct.TYPE_9__**)*, i64 (%struct.TYPE_9__**)** %42, align 8
  %44 = load %struct.TYPE_9__**, %struct.TYPE_9__*** %12, align 8
  %45 = call i64 %43(%struct.TYPE_9__** %44)
  %46 = icmp ne i64 %45, 0
  br i1 %46, label %47, label %51

47:                                               ; preds = %5
  %48 = load i32*, i32** %6, align 8
  %49 = load %struct.TYPE_9__**, %struct.TYPE_9__*** %12, align 8
  %50 = call i32 @fz_throw_java(i32* %48, %struct.TYPE_9__** %49)
  br label %51

51:                                               ; preds = %47, %5
  ret void
}

declare dso_local i32 @to_Image(i32*, %struct.TYPE_9__**, i32*) #1

declare dso_local i32 @to_Matrix(i32*, %struct.TYPE_9__**, i32) #1

declare dso_local i32 @fz_throw_java(i32*, %struct.TYPE_9__**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
